--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Burger Store",
-  "short_name": "Burger Builder",
+  "short_name": "My Burger",
   "description": "Order your customized burger with selectable ingredients",
   "icons": [
     {
