--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://alirezafereydoni.github.io/the-burger-builder/",
-  "name": "burger-builder",
+  "homepage": "https:/my-burger.com/",
+  "name": "my-burger",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
